Upgrade to gradle docker plugin 6.3.0; Upgrade to OpenJDK 13